# saltfs

./: .hgignore  CMakeLists.txt  README.md  readme.rst  Задание на курсовой проект.odt
doc/: bib.bib  kernel_ipc_consideration
doc/lyx/: 00-abstract.lyx  10-defines.lyx  11-abbrev.lyx  12-intro.lyx  20-analysis.lyx  30-design.lyx  40-impl.lyx  50-research.lyx  80-conclusion.lyx  90-appendix1.lyx  rpz.bib  rpz.lyx  rpz.lyx.emergency
doc/lyx/code/: hook.pas
doc/lyx/pic/: arch.odg  hierarchy.mm  hierarchy.pdf_tex  salt_dir_iterate.odg  salt_fill_dir.odg
src/kern/: CMakeLists.txt  Kbuild  clean.fish  defines.h  dir.c  dir.h  file.c  file.h  function.c  function.h  grain.c  grain.h  inode.c  inode.h  internal.h  result.c  result.h  saltfs.h  string.c  string.h  super.c  super.h  user.c  user.h
src/user/: manage  salt_common.fish  saltfs.fish
src/user/completions/: saltfs.fish
src/user/test/: test_list.fish  test_saltfs.fish
vm/: Vagrantfile  insert.fish  manage  vm
vm/salt/: bootstrap.sh  minion
vm/salt/states/: config.fish  fish.sls  pkgs.sls  sshkey.sls  time.sls  top.sls
vm/salt/states/sshkey/: host_id_rsa.pub  init.sls
